Added distribution with jre included.